@@ -74,9 +74,9 @@
  *    <td><b>Description:</b></td>
  *   </tr>
  *   <tr>
- *    <td>BUFF_STATICSIZE</td>
- *    <td>RingBuff.h</td>
- *    <td>Defines the maximum number of bytes which can be buffered in each Ring Buffer.</td>
+ *    <td>BUFFER_SIZE</td>
+ *    <td>LightweightRingBuff.h</td>
+ *    <td>Defines the maximum number of bytes which can be buffered in each Ring Buffer when in serial bridge mode.</td>
  *   </tr>
  *   <tr>
  *    <td>LIBUSB_DRIVER_COMPAT</td>
