@@ -9,6 +9,8 @@
   *  \section Sec_ChangeLogXXXXXX Version XXXXXX
   *  <b>New:</b>
   *  - Added new ADC_DisableChannel() function (thanks to Mich Davis)
+  *  - Added new VTARGET_REF_VOLTS and VTARGET_SCALE_FACTOR compile time defines to the AVRISP-MKII programmer project to set
+  *    the VTARGET reference voltage and scale factor
   *
   *  <b>Changed:</b>
   *  - The RingBuff library code has been replaced in the XPLAINBridge, Benito and USBtoSerial projects with an ultra lightweight
@@ -26,6 +28,7 @@
   *    instead of the split write-only command (thanks to Tim Margush)
   *  - Fixed RNDISEthernet demos crashing when calculating checksums for Ethernet/TCP packets of more than ~500 bytes due to
   *    an overflow in the checksum calculation loop (thanks to Kevin Malec)
+  *  - Fixed XPLAINBridge project not correctly reading the XMEGA's supply voltage when reporting back to the host
   *
   *  \section Sec_ChangeLog100513 Version 100513
   *  <b>New:</b>
